add cv done
