# CVM-Front/src/app/Services/SWAGGER/api/cvs.service.ts
@@ -482,13 +482,8 @@ export class CvsService {
 
     /**
      * @param fileName 
-     * @param contentType 
-     * @param metadata 
-     * @param categories 
-     * @param uploadedDate 
      * @param originalFileName 
-     * @param downloadUrl 
-     * @param textContent 
+     * @param contentType 
      * @param id 
      * @param createdAt 
      * @param updatedAt 
@@ -499,45 +494,23 @@ export class CvsService {
      * @param observe set whether or not to return the data Observable as the body, response or events. defaults to returning the body.
      * @param reportProgress flag to report request and response progress.
      */
-    public apiCvsPost(fileName?: string, contentType?: string, metadata?: string, categories?: Array<Category>, uploadedDate?: string, originalFileName?: string, downloadUrl?: string, textContent?: string, id?: number, createdAt?: string, updatedAt?: string, createdBy?: string, modifiedBy?: string, tenantId?: number, cvFile?: Blob, observe?: 'body', reportProgress?: boolean, options?: {httpHeaderAccept?: 'text/plain' | 'application/json' | 'text/json', context?: HttpContext, transferCache?: boolean}): Observable<CvDtoResult>;
-    public apiCvsPost(fileName?: string, contentType?: string, metadata?: string, categories?: Array<Category>, uploadedDate?: string, originalFileName?: string, downloadUrl?: string, textContent?: string, id?: number, createdAt?: string, updatedAt?: string, createdBy?: string, modifiedBy?: string, tenantId?: number, cvFile?: Blob, observe?: 'response', reportProgress?: boolean, options?: {httpHeaderAccept?: 'text/plain' | 'application/json' | 'text/json', context?: HttpContext, transferCache?: boolean}): Observable<HttpResponse<CvDtoResult>>;
-    public apiCvsPost(fileName?: string, contentType?: string, metadata?: string, categories?: Array<Category>, uploadedDate?: string, originalFileName?: string, downloadUrl?: string, textContent?: string, id?: number, createdAt?: string, updatedAt?: string, createdBy?: string, modifiedBy?: string, tenantId?: number, cvFile?: Blob, observe?: 'events', reportProgress?: boolean, options?: {httpHeaderAccept?: 'text/plain' | 'application/json' | 'text/json', context?: HttpContext, transferCache?: boolean}): Observable<HttpEvent<CvDtoResult>>;
-    public apiCvsPost(fileName?: string, contentType?: string, metadata?: string, categories?: Array<Category>, uploadedDate?: string, originalFileName?: string, downloadUrl?: string, textContent?: string, id?: number, createdAt?: string, updatedAt?: string, createdBy?: string, modifiedBy?: string, tenantId?: number, cvFile?: Blob, observe: any = 'body', reportProgress: boolean = false, options?: {httpHeaderAccept?: 'text/plain' | 'application/json' | 'text/json', context?: HttpContext, transferCache?: boolean}): Observable<any> {
+    public apiCvsPost(fileName?: string, originalFileName?: string, contentType?: string, id?: number, createdAt?: string, updatedAt?: string, createdBy?: string, modifiedBy?: string, tenantId?: number, cvFile?: Blob, observe?: 'body', reportProgress?: boolean, options?: {httpHeaderAccept?: 'text/plain' | 'application/json' | 'text/json', context?: HttpContext, transferCache?: boolean}): Observable<CvDtoResult>;
+    public apiCvsPost(fileName?: string, originalFileName?: string, contentType?: string, id?: number, createdAt?: string, updatedAt?: string, createdBy?: string, modifiedBy?: string, tenantId?: number, cvFile?: Blob, observe?: 'response', reportProgress?: boolean, options?: {httpHeaderAccept?: 'text/plain' | 'application/json' | 'text/json', context?: HttpContext, transferCache?: boolean}): Observable<HttpResponse<CvDtoResult>>;
+    public apiCvsPost(fileName?: string, originalFileName?: string, contentType?: string, id?: number, createdAt?: string, updatedAt?: string, createdBy?: string, modifiedBy?: string, tenantId?: number, cvFile?: Blob, observe?: 'events', reportProgress?: boolean, options?: {httpHeaderAccept?: 'text/plain' | 'application/json' | 'text/json', context?: HttpContext, transferCache?: boolean}): Observable<HttpEvent<CvDtoResult>>;
+    public apiCvsPost(fileName?: string, originalFileName?: string, contentType?: string, id?: number, createdAt?: string, updatedAt?: string, createdBy?: string, modifiedBy?: string, tenantId?: number, cvFile?: Blob, observe: any = 'body', reportProgress: boolean = false, options?: {httpHeaderAccept?: 'text/plain' | 'application/json' | 'text/json', context?: HttpContext, transferCache?: boolean}): Observable<any> {
 
         let localVarQueryParameters = new HttpParams({encoder: this.encoder});
         if (fileName !== undefined && fileName !== null) {
           localVarQueryParameters = this.addToHttpParams(localVarQueryParameters,
             <any>fileName, 'FileName');
         }
-        if (contentType !== undefined && contentType !== null) {
-          localVarQueryParameters = this.addToHttpParams(localVarQueryParameters,
-            <any>contentType, 'ContentType');
-        }
-        if (metadata !== undefined && metadata !== null) {
-          localVarQueryParameters = this.addToHttpParams(localVarQueryParameters,
-            <any>metadata, 'Metadata');
-        }
-        if (categories) {
-            categories.forEach((element) => {
-                localVarQueryParameters = this.addToHttpParams(localVarQueryParameters,
-                  <any>element, 'Categories');
-            })
-        }
-        if (uploadedDate !== undefined && uploadedDate !== null) {
-          localVarQueryParameters = this.addToHttpParams(localVarQueryParameters,
-            <any>uploadedDate, 'UploadedDate');
-        }
         if (originalFileName !== undefined && originalFileName !== null) {
           localVarQueryParameters = this.addToHttpParams(localVarQueryParameters,
             <any>originalFileName, 'OriginalFileName');
         }
-        if (downloadUrl !== undefined && downloadUrl !== null) {
+        if (contentType !== undefined && contentType !== null) {
           localVarQueryParameters = this.addToHttpParams(localVarQueryParameters,
-            <any>downloadUrl, 'DownloadUrl');
-        }
-        if (textContent !== undefined && textContent !== null) {
-          localVarQueryParameters = this.addToHttpParams(localVarQueryParameters,
-            <any>textContent, 'TextContent');
+            <any>contentType, 'ContentType');
         }
         if (id !== undefined && id !== null) {
           localVarQueryParameters = this.addToHttpParams(localVarQueryParameters,
